Version 1.1.0-CVS (?? ??? 2006)
 - Fixed bug 1521837: no entries for 'deleted entries' at 'activity.log'
 - Fixed bug 1522560: 'Scheduling Conflict events' will be displayed in mixed
 - Fixed bug 1530179: 'Public Access' using UAC will not be translated
 - Fixed bug 1518552: PHP5 and MySQLi Warnings
 - Fixed bug 1520002: 'top-menue' are not at the left-margin for year.php
 - Fixed bug 1516114: Javascript top menu does'nt work in french
 - Added hCalendar feature to Remote Calendars
 - Fixed bug 1513448: Cannot Display Attachment
 - Fixed bug 1511337: time-stamps at the 'activity-log' are incorrect
 - Fixed bug 1511120: 'unapproved-icon' in 'top-menue' not properly displayed
 - Fixed bug 1510761: missing 'back to my calendar' in the 'top-menue'
 - Fixed bug 1497931: Weird repeating events - read on
 - Fixed bug 1509045: repeated events seem to be shown out of order
 - Fixed bug 1510599: Adding event to public access error.
 - Fixed bug 1508681: 'convert to GMT' - button is missing
 - Fixed bug 1507985: event participant shown in public popup
 - Fixed bug 1506417: user-imap.php (rev 1.10) gave me a parse error on line 151
 - Changed view_t.php to use $ENTRY_SLOT value and improve event placement
 - Fixed bug 1503762: Table cell bg for current day not diplayed on weekends
 - Fixed bug 1505083: get_weekday_before doesn't return a value on
 - Fixed bug 1502420: daily repeat doesn't skip weekend
 - Fixed bug 1414471: missing 'back to my calendar' in the trailer for 'non_user'
 - Fixed bug 1366151: NUC's cannot be handled by their admins
 - Fixed bug 1499150: Events Not Wordwrapping Correctly
 - Implemented new method of restricting direct file access
 - Implemented PATCH 1498087: Add simple navigation to help
 - Implemented PATCH 1498201: Don't print ThemeMenubar
 - Fixed bug 1497840: Entries not shown in Day view for current day +GMT TZ only
 - Fixed bug 1472286: Event Creation Aborted Upon Error
 - Fixed bug 1476212: Conflict check with repeating events and DST