@@ -1,5 +1,7 @@
 Version 1.1.0-CVS (?? ??? 2006)
   - Fixed the following bug reports on SourceForge:
+      1536755: Activity Log for single event shows incorrect time
+      1536785: Activity Log Report only shows times in GMT
       1521837: no entries for 'deleted entries' at 'activity.log'
       1522560: 'Scheduling Conflict events' will be displayed in mixed
       1530179: 'Public Access' using UAC will not be translated
